# PatchWeaver

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  environment.yml  pyproject.toml  赛题要求.md
.claude/: settings.local.json
config/: build.yaml  logging.yaml  models.yaml  observability.yaml  profiles.yaml  prompts.yaml  rag.yaml  rules.yaml  skills.yaml  system.yaml  verify.yaml
docs/: PatchWeaver-失败样例证据包_v0414.md  PatchWeaver-封版Demo与交付口径_v0510.md  PatchWeaver-总方案与创新设计总文档.md  PatchWeaver-模型选型说明.md  PatchWeaver-百炼应用落地说明.md  PatchWeaver-第一至三期验证测试报告_v0420.md  bailian_gateway.md  deployment.md  release_closure_validation_v0510.md  semantic_consistency_review_v0510.md  submission_evidence_bundle_v0510.md  web_api_e2e_validation.md  百炼应用使用手册.md
patchweaver/: __init__.py  __main__.py  runtime_inspector.py  task_creation_policy.py
rag_corpus/: README.md  manifest.json
rag_corpus_batch100/: README.md  manifest.json  repair_summary.md
rag_corpus_batch20/: README.md  manifest.json  repair_summary.md
rag_corpus_batch200/: README.md  manifest.json  repair_summary.md
scripts/: build_positive_pool_evidence_manifest.py  build_rag_corpus.py  build_stable_baseline_evidence_manifest.py  build_submission_evidence_bundle.py  build_timeout_cleanup_smoke.py  complex_route_validation_smoke.py  constraint_route_smoke.py  deploy_patchweaver.py  deploy_patchweaver.sh  generate_daily_work_plan.py  generate_demo_report.py  generate_representative_metrics_report.py  generate_submission_package.py  import_rag_to_milvus.py  install_patchweaver.py  install_patchweaver.sh  package_bailian_gateway.py  plan_p1_expansion_batch.py  prepare_docker_host_root.sh  rebuild_dev_api.sh  release_redaction_check.py  repair_docker_web_environment.sh  restart_dev_api_from_source.sh  restart_dev_web_from_source.sh  rewrite_route_smoke.py  run_bailian_gateway.py  run_holdout_blind.py  screen_challenge_pool.py  screen_semantic_guard_candidates.py  semantic_card_smoke.py  source_chain_smoke.py  upload_to_validation.cmd  upload_to_validation.py  validate_bailian_gateway_e2e.py  validate_smoke.sh  validate_web_api_e2e.py
(+2684 files in other folders)
