# 构建系统
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# 项目信息
[project]
name = "patchweaver"
version = "0.1.0"
description = "Anolis OS ANCK kernel CVE livepatch generation agent"
readme = "README.md"
requires-python = ">=3.11"

# 运行依赖
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "unidiff>=0.7",
  "rich>=13.7"
]

# 命令入口
[project.scripts]
patchweaver = "patchweaver.cli.app:app"
